added photo library

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <input type="submit" value="Submit" />
     </form>
 
+    <div class="photo-grid">
+      <img src="static/img1.png">
+      <img src="static/img2.png">
+      <img src="static/img3.png">
+    </div>
+    
+
     <script src="index.js"></script>
   </body>
 </html>
