made more mid journey images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <img src="static/img1.png">
       <img src="static/img2.png">
       <img src="static/img3.png">
+      <img src="static/img4.png">
+      <img src="static/img5.png">
+      <img src="static/img6.png">
     </div>
     
 
