added copyable prompts to images

--- a/index.html
+++ b/index.html
@@ -21,14 +21,43 @@
     </form>
 
     <div class="photo-grid">
-      <img src="static/img1.png">
-      <img src="static/img2.png">
-      <img src="static/img3.png">
-      <img src="static/img4.png">
-      <img src="static/img5.png">
-      <img src="static/img6.png">
+      <div class="photo">
+        <img src="static/img1.png" />
+        <div class="text" data-text="Nature infused with AI">
+          Nature infused with AI<button class="copy-button">Copy</button>
+        </div>
+      </div>
+      <div class="photo">
+        <img src="static/img2.png" />
+        <div class="text" data-text="A beautiful mind">
+          A beautiful mind<button class="copy-button">Copy</button>
+        </div>
+      </div>
+      <div class="photo">
+        <img src="static/img3.png" />
+        <div class="text" data-text="Duality of life">
+          Duality of life<button class="copy-button">Copy</button>
+        </div>
+      </div>
+      <div class="photo">
+        <img src="static/img4.png" />
+        <div class="text" data-text="International Women's Day">
+          International Women's Day<button class="copy-button">Copy</button>
+        </div>
+      </div>
+      <div class="photo">
+        <img src="static/img5.png" />
+        <div class="text" data-text="A Dystopian City">
+          A Dystopian City<button class="copy-button">Copy</button>
+        </div>
+      </div>
+      <div class="photo">
+        <img src="static/img6.png" />
+        <div class="text" data-text="Old War Veteran">
+          Old War Veteran<button class="copy-button">Copy</button>
+        </div>
+      </div>
     </div>
-    
 
     <script src="index.js"></script>
   </body>
