--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <form>
-      <label for="text-input">Place your prompt:</label>
+      <label for="text-input">Write away!</label>
       <input
         type="text"
         id="text-input"
