forgotten commit. add history

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         id="text-input"
         name="text-input"
         placeholder="An interdimensional storm in space time..."
+        list="previous-requests"
       />
+      <datalist id="previous-requests"></datalist>
       <input type="submit" value="Submit" />
     </form>
 
